--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,12 +1,10 @@
-name: Test Python Project
+name: Leetcode
 
 on: [push, pull_request]
 
 jobs:
-  deploy:
-
+  install_and_test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
